--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Me -->
     <section class="myclass aling-items-stretch">
         <div class="myclass-main d-flex flex-column justify-content-center aling-items-center">
-            <img class="myclass-pic rounded-circle" src="./images/tata2.png" alt="My selfie">
+            <img class="myclass-pic rounded-circle" src="./images/tatatrans.png" alt="My selfie">
             <h1>Hola, soy chayotito</h1>
             <h2>La c mamu programadora xddddd</h2>
         </div>
