--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Title -->
     <title>My Profile</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./images/tata.png">
+    <link rel="icon" type="image/x-icon" href="./images/logoicon.png">
     <!-- Bootstrap CSS offline -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons offline -->
@@ -32,7 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar-toggler">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/tata.png" width="50" alt="My logo">
+                    <img src="./images/logoicon.png" width="50" alt="My logo">
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center aling-items-center">
                     <li class="nav-item">
@@ -56,11 +56,11 @@
     <section class="myclass aling-items-stretch">
         <div class="myclass-main d-flex flex-column justify-content-center aling-items-center">
             <img class="myclass-pic rounded-circle" src="./images/tata.png" alt="My selfie">
-            <h1>Hola, soy chayotito</h1>
-            <h2>La c mamu programadora xddddd</h2>
+            <h1>Hola, soy Hayil</h1>
+            <h2>La proxima inge</h2>
         </div>
         <div class="myclass-label">            
-            <img class="myclass-imagen img-fluid" src="./images/undraw_code_thinking.svg" alt="think twice code once">
+            <img class="myclass-imagen img-fluid" src="./images/wallen.png" alt="think twice code once">
         </div>
     </section>
 
