--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Bootstrap Icons online -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> -->
     <!-- My CSS -->
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/style.css?v=2" rel="stylesheet">
 </head>
 <body>
     <!-- NavBar -->
